--- a/focus_2.html
+++ b/focus_2.html
@@ -79,22 +79,21 @@
                             </div>
 
                             <div class="company">
-                                <div class="company__name">紹琪實業股份有限公司</div>
-                                <a href="https://www.shaochi.com.tw" target="_blank" class="company__link"
-                                    title="www.shaochi.com.tw">www.shaochi.com.tw</a>
+                                <div class="company__name">斯卓明國際貿易有限公司</div>
+                                <a href="https://www.twincn.com/item.aspx?no=89153491" target="_blank" class="company__link"
+                                    title="StreaMing International Trading">&nbsp;</a>
                                 <div class="company__area">
                                     <img src="./img/bullet_trans.svg" class="img-fluid" />
                                     輸送儲存與配件區
                                 </div>
                                 <div class="company__logo">
-                                    <img src="./img/focus_logo_01.jpg" title="紹琪實業股份有限公司" />
+                                    <img src="./img/focus_logo_02.jpg" title="斯卓明國際貿易有限公司" />
                                 </div>
                             </div>
 
                             <div class="company__content">
                                 <div class="company__title-intro">公司簡介</div>
-                                <p>紹琪實業自1993年成立以來，致力於生產優質橡膠製品，應用範圍涵蓋飲用水設備、汽機車零件、航太和醫療器具等多個產業。公司不斷研發並運用CNC電腦車床技術，生產高品質模具和使用專用機器，如真空罩熱壓成型機和MICRO-VU影像量測儀，以提高產品品質和尺寸精確度。</p>
-                                <p>此外，紹琪還引進了射出機，以生產大型客製化產品。公司配合長泓膠業使用高品質原料，進行嚴格的品質檢測，以確保從原料到成品的品質，滿足客戶需求，並將其優質橡膠製品推廣至全球市場。</p>
+                                <p>斯卓明國際貿易有限公司自成立以來，一直致力於提供新的技術和產品設計，包括各式閥類，如蝶閥、球塞閥等產品。透過不斷的研發，公司致力於提高產品在系統中的效能，同時確保產品具有更長的使用壽命、更省力的操作和更穩定的品質。</p>
                             </div>
 
                             <div class="company__content">
@@ -103,32 +102,71 @@
                                 <ul>
                                     <!-- item 1 -->
                                     <li class="company__item">
-                                        <div class="company__item-name">O 型環</div>
-                                        <p>紹琪生產的O型環具有多項優點。首先，所有規格品的模具齊全，可以提供客製化包裝，並隨時備有庫存以滿足大量快速出貨的需求。此外，紹琪擁有30年的製造經驗，能精準控制生產條件並使用低溫氮氣去除毛邊以提高產品品質。而內部採用全檢機和人工雙重品檢，確保每個產品都符合品質標準。</p>
-                                        <img src="./img/pd_p01.jpg" class="company__item-img" />
-                                    </li>
+                                        <div class="company__item-name">銹鋼偏心式蝶閥</div>
+                                        <p>本產品具有配管間距小、不占空間的特點，因此可應用於管道間，並滿足客戶的需求。此蝶閥使用分離式鐵氟龍閥座，並採用專利型的設計，具有閥座壓力補償功能，關閉功能極佳。</p>
+                                        <p>相較於傳統的包覆式蝶閥膠圈容易因膠圈變形而硬化，導致操作扭力增大而無法防止漏水，此產品的分離式鐵氟龍閥座避免了這樣的問題。此外，偏心式蝶閥的閥座可根據系統液體的適用性進行更換，並且可快速加裝斷熱材料，以符合冰水系統的防結露要求。</p>
+                                        <div class="company__item-box">
+                                            <img src="./img/pd2_p01.jpg" class="company__item-img" />
+                                            <div class="company__item-info">
+                                            <div class="company__item-title">特點：</div>
+                                            <ol>
+                                                <li>結構輕量化，方便安裝</li>
+                                                <li>優異的止漏功能</li>
+                                                <li>安全性高，設有制鎖裝置</li>
+                                                <li>閥座可更換，增加維修彈性</li>
+                                                <li>具有防結露功能，適用於冰水系統</li>
+                                            </ol>
+                                        </div>
+                                    </div>
+                                </li>
 
                                     <!-- item 2 -->
                                     <li class="company__item">
-                                        <div class="company__item-name">X 型環</div>
-                                        <p>紹琪所生產的X型環，又稱為星型環或Q-RING。本產品可適用於NBR和FKM材質，能提供優異的動態密封功能。特點包含備有齊全的模具，可提供客製化包裝，並隨時擁有庫存以滿足大量快速出貨的需求。
+                                        <div class="company__item-name">不鏽鋼球塞閥</div>
+                                        <p>斯卓明的不鏽鋼球塞閥是一種經濟實用的閥門產品。該產品體積小，但出水量大，具有良好的經濟性。其快速開啟和關斷的特點使其操作更加方便。此外，此閥門的保養費用較低，並且面間距離較短。
                                         </p>
-                                        <img src="./img/pd_p02.jpg" class="company__item-img" />
-                                    </li>
+                                        <p>不鏽鋼球塞閥的耐久性良好，可以長期使用。另外，此產品可以更換多種型式的把手，包括T型、圓型、延伸加高型、鎖片固定型、刻度型、電動型和氣動型等，具有更多的使用彈性。
+                                        </p>
+                                        <div class="company__item-box">
+                                            <img src="./img/pd2_p02.jpg" class="company__item-img" />
+                                            <div class="company__item-info">
+                                            <div class="company__item-title">特點：</div>
+                                            <ol>
+                                                <li>開關流體阻力小</li>
+                                                <li>氣密性高，扭力小</li>
+                                                <li>壓力落差小，擾流小</li>
+                                            </ol>
+                                        </div>
+                                    </div>
+                                </li>
 
                                     <!-- item 3 -->
                                     <li class="company__item">
-                                        <div class="company__item-name">客製化異型件</div>
-                                        <p>紹琪在異型件開發方面有著優秀的能力，可以與客戶共同研發新產品。客戶只需提供圖面和使用條件，紹琪就能夠進行開發和生產。紹琪的客製化異型件具有以下特點：能夠開發客製化模具，生產能力強，開發週期短，並常備庫存以確保供應客戶生產線順利進行。</p>
-                                        <img src="./img/pd_p03.jpg" class="company__item-img" />
-                                    </li>
+                                        <div class="company__item-name">砲金銅/不銹鋼減壓閥組</div>
+                                        <p>減壓閥是一種專門的閥門裝置，能夠自動地降低管路工作壓力，將閥前管路較高的水壓減少至閥後管路所需的水平。此產品廣泛應用於高層建築，以確保給水系統中各用水點都能獲得適當的服務水壓和流量。</p>
+                                        <p>由於水的漏失率和浪費程度幾乎與給水系統的水壓大小成正比，因此減壓閥在改善系統運行狀況和潛在節水方面發揮重要作用。此外，該產品可提供砲金銅或不銹鋼材質選擇。</p>
+                                        <div class="company__item-box">
+                                            <img src="./img/pd2_p03.jpg" class="company__item-img" />
+                                            <div class="company__item-info">
+                                            <div class="company__item-title">特點：</div>
+                                            <ol>
+                                                <li>具備強化尼龍絲和EPDM隔膜的內置設計。</li>
+                                                <li>具備不鏽鋼濾網的內置設計，以防止異物卡住閥座或損傷隔膜。</li>
+                                                <li>具有下置的緩衝彈簧，能夠減緩水錘沖擊壓力。</li>
+                                            </ol>
+                                        </div>
+                                    </div>
+                                </li>
+
+
+
                                 </ul>
                             </div>
 
                             <div class="company__other">
-                                <a href="focus.html" class="company__other-link active"
+                                <a href="focus.html" class="company__other-link"
                                     title="紹琪實業股份有限公司">紹琪實業股份有限公司<!--<span>A0001</span>--></a>
-                                <a href="focus_2.html" class="company__other-link "
+                                <a href="focus_2.html" class="company__other-link active"
                                     title="斯卓明國際貿易有限公司">斯卓明國際貿易有限公司<!--<span>A0001</span>--></a>
                                 <a href="focus_3.html" class="company__other-link"
                                     title="繼茂橡膠工業股份有限公司">繼茂橡膠工業股份有限公司<!--<span>A0001</span>--></a>
