--- a/focus_3.html
+++ b/focus_3.html
@@ -79,22 +79,21 @@
                             </div>
 
                             <div class="company">
-                                <div class="company__name">紹琪實業股份有限公司</div>
-                                <a href="https://www.shaochi.com.tw" target="_blank" class="company__link"
-                                    title="www.shaochi.com.tw">www.shaochi.com.tw</a>
+                                <div class="company__name">繼茂橡膠工業股份有限公司</div>
+                                <a href="https://www.gmors.com.tw/" target="_blank" class="company__link"
+                                    title="www.gmors.com.tw">www.gmors.com.tw</a>
                                 <div class="company__area">
                                     <img src="./img/bullet_trans.svg" class="img-fluid" />
                                     輸送儲存與配件區
                                 </div>
                                 <div class="company__logo">
-                                    <img src="./img/focus_logo_01.jpg" title="紹琪實業股份有限公司" />
+                                    <img src="./img/focus_logo_03.jpg" title="繼茂橡膠工業股份有限公司" />
                                 </div>
                             </div>
 
                             <div class="company__content">
                                 <div class="company__title-intro">公司簡介</div>
-                                <p>紹琪實業自1993年成立以來，致力於生產優質橡膠製品，應用範圍涵蓋飲用水設備、汽機車零件、航太和醫療器具等多個產業。公司不斷研發並運用CNC電腦車床技術，生產高品質模具和使用專用機器，如真空罩熱壓成型機和MICRO-VU影像量測儀，以提高產品品質和尺寸精確度。</p>
-                                <p>此外，紹琪還引進了射出機，以生產大型客製化產品。公司配合長泓膠業使用高品質原料，進行嚴格的品質檢測，以確保從原料到成品的品質，滿足客戶需求，並將其優質橡膠製品推廣至全球市場。</p>
+                                <p>繼茂橡膠成立於1986年，是臺灣領先的橡膠密封零配件品牌。產品種類多元，包含O型環、橡膠製品及耐氯胺橡膠配方等，已廣泛應用於飲用水、食品、空氣壓縮、汽車、半導體、一般工業、醫療和航太等多個行業。公司以其卓越的品質贏得了客戶的廣泛認可。</p>
                             </div>
 
                             <div class="company__content">
@@ -103,34 +102,69 @@
                                 <ul>
                                     <!-- item 1 -->
                                     <li class="company__item">
-                                        <div class="company__item-name">O 型環</div>
-                                        <p>紹琪生產的O型環具有多項優點。首先，所有規格品的模具齊全，可以提供客製化包裝，並隨時備有庫存以滿足大量快速出貨的需求。此外，紹琪擁有30年的製造經驗，能精準控制生產條件並使用低溫氮氣去除毛邊以提高產品品質。而內部採用全檢機和人工雙重品檢，確保每個產品都符合品質標準。</p>
-                                        <img src="./img/pd_p01.jpg" class="company__item-img" />
-                                    </li>
+                                        <div class="company__item-name">耐氯胺橡膠配方</div>
+                                        <p>為了提供安全、衛生的自來水，水中添加氯可達到消毒作用，降低自來水在輸送過程中受細菌汙染的機會。在消毒過程中，氯會與水中的氮發生化學反應，產生一氯胺和二氯胺，這些氯胺類被稱為結合餘氯。</p>
+                                        <p>繼茂實驗室開發了特殊配方，製造耐氯和氯胺的橡膠密封件，有效避免橡膠受到侵蝕，從而導致密封件失效，延長產品使用壽命。</p>
+                                        <div class="company__item-box">
+                                            <img src="./img/pd3_p01.jpg" class="company__item-img" />
+                                            <div class="company__item-info">
+                                            <div class="company__item-title">特點：</div>
+                                            <ol>
+                                                <li>符合ASTM D6284氯胺測試標準。</li>
+                                                <li>耐氯胺濃度可高達100 ppm。</li>
+                                                <li>經長時間測試，溶液中無橡膠密封件析出物。</li>
+                                            </ol>
+                                        </div>
+                                    </div>
+                                </li>
 
                                     <!-- item 2 -->
                                     <li class="company__item">
-                                        <div class="company__item-name">X 型環</div>
-                                        <p>紹琪所生產的X型環，又稱為星型環或Q-RING。本產品可適用於NBR和FKM材質，能提供優異的動態密封功能。特點包含備有齊全的模具，可提供客製化包裝，並隨時擁有庫存以滿足大量快速出貨的需求。
+                                        <div class="company__item-name">O型環與橡膠品製造</div>
+                                        <p>繼茂提供多種國際標準規格的O型環，包括美規AS 568、米制METRIC、英規BS 4518、國標GB/T 3452.1、日規JIS B2401 P/G/S/V、JASO F404和瑞典規SMS 1586。其中大部分規格已有現有模具，無需額外投資。
                                         </p>
-                                        <img src="./img/pd_p02.jpg" class="company__item-img" />
-                                    </li>
+                                        <p>此外，備有提供多種材質以滿足各種需求，包括FKM、HNBR、NBR、Silicone、EPDM、Fluorosilicone、PU、SBR和XNBR等材質。
+                                        </p>
+                                        <div class="company__item-box">
+                                            <img src="./img/pd3_p02.jpg" class="company__item-img" />
+                                            <div class="company__item-info">
+                                            <div class="company__item-title">特點：</div>
+                                            <ol>
+                                                <li>多樣化：提供O型環、X型環、華司墊圈、橡膠球、傘閥、鴨嘴閥、液態矽膠/橡膠夾鐵/薄膜夾紗密封件等產品</li>
+                                                <li>客製化：除現有產品，亦可接受其他客製化尺寸、形狀或特殊要求</li>
+                                            </ol>
+                                        </div>
+                                    </div>
+                                </li>
 
                                     <!-- item 3 -->
                                     <li class="company__item">
-                                        <div class="company__item-name">客製化異型件</div>
-                                        <p>紹琪在異型件開發方面有著優秀的能力，可以與客戶共同研發新產品。客戶只需提供圖面和使用條件，紹琪就能夠進行開發和生產。紹琪的客製化異型件具有以下特點：能夠開發客製化模具，生產能力強，開發週期短，並常備庫存以確保供應客戶生產線順利進行。</p>
-                                        <img src="./img/pd_p03.jpg" class="company__item-img" />
-                                    </li>
+                                        <div class="company__item-name">飲用水材料認證</div>
+                                        <p>考慮到飲用水的安全衛生需求，接觸飲用水的材料至關重要。繼茂橡膠提供符合國際標準的彈性密封產品，包括O型環、密封件、墊片、橡膠薄膜和客製化產品。我們的實驗室進行材料開發和認證工作，並獲得多項國際認證，如美國NSF、英國WRAS、法國ACS、德國UBA(KTW)和澳洲AS/NZS4020等。</p>
+                                        <div class="company__item-box">
+                                            <img src="./img/pd3_p03.jpg" class="company__item-img" />
+                                            <div class="company__item-info">
+                                            <div class="company__item-title">特點：</div>
+                                            <ol>
+                                                <li>配方認證可符合特定市場的要求。</li>
+                                                <li>經過認證的實驗室可根據您的需求或ASTM D200標準開發和鑑定匹配的配方。</li>
+                                                <li>通過美國NSF、英國WRAS認證、德國 UBA(KTW)等多項國際認證。</li>
+                                            </ol>
+                                        </div>
+                                    </div>
+                                </li>
+
+
+
                                 </ul>
                             </div>
 
                             <div class="company__other">
-                                <a href="focus.html" class="company__other-link active"
+                                <a href="focus.html" class="company__other-link"
                                     title="紹琪實業股份有限公司">紹琪實業股份有限公司<!--<span>A0001</span>--></a>
-                                <a href="focus_2.html" class="company__other-link "
+                                <a href="focus_2.html" class="company__other-link"
                                     title="斯卓明國際貿易有限公司">斯卓明國際貿易有限公司<!--<span>A0001</span>--></a>
-                                <a href="focus_3.html" class="company__other-link"
+                                <a href="focus_3.html" class="company__other-link active"
                                     title="繼茂橡膠工業股份有限公司">繼茂橡膠工業股份有限公司<!--<span>A0001</span>--></a>
                                 <a href="focus_4.html" class="company__other-link"
                                     title="全基企業有限公司">全基企業有限公司<!--<span>A0001</span>--></a>
