--- a/focus_4.html
+++ b/focus_4.html
@@ -79,22 +79,21 @@
                             </div>
 
                             <div class="company">
-                                <div class="company__name">紹琪實業股份有限公司</div>
-                                <a href="https://www.shaochi.com.tw" target="_blank" class="company__link"
-                                    title="www.shaochi.com.tw">www.shaochi.com.tw</a>
+                                <div class="company__name">全基企業有限公司</div>
+                                <a href="https://www.polygretco.com/" target="_blank" class="company__link"
+                                    title="www.polygretco.com">www.polygretco.com</a>
                                 <div class="company__area">
-                                    <img src="./img/bullet_trans.svg" class="img-fluid" />
-                                    輸送儲存與配件區
+                                    <img src="./img/bullet_construction.svg" class="img-fluid" />
+                                    水環境建設及周邊服務區
                                 </div>
                                 <div class="company__logo">
-                                    <img src="./img/focus_logo_01.jpg" title="紹琪實業股份有限公司" />
+                                    <img src="./img/focus_logo_04.jpg" title="全基企業有限公司" />
                                 </div>
                             </div>
 
                             <div class="company__content">
                                 <div class="company__title-intro">公司簡介</div>
-                                <p>紹琪實業自1993年成立以來，致力於生產優質橡膠製品，應用範圍涵蓋飲用水設備、汽機車零件、航太和醫療器具等多個產業。公司不斷研發並運用CNC電腦車床技術，生產高品質模具和使用專用機器，如真空罩熱壓成型機和MICRO-VU影像量測儀，以提高產品品質和尺寸精確度。</p>
-                                <p>此外，紹琪還引進了射出機，以生產大型客製化產品。公司配合長泓膠業使用高品質原料，進行嚴格的品質檢測，以確保從原料到成品的品質，滿足客戶需求，並將其優質橡膠製品推廣至全球市場。</p>
+                                <p>全基企業是一家致力於提供管道系統解決方案的服務商，進口高品質的下水道檢測和管道修復產品及設備。藉由強大的技術服務團隊、20多年的管道修復經驗以及與國際產品和技術的緊密合作，使公司能夠以市場為導向的檢測技術和高品質服務，為客戶提供量身定制的解決方案，從單一系統檢測到各種複雜管道的維護和更新。</p>
                             </div>
 
                             <div class="company__content">
@@ -103,36 +102,40 @@
                                 <ul>
                                     <!-- item 1 -->
                                     <li class="company__item">
-                                        <div class="company__item-name">O 型環</div>
-                                        <p>紹琪生產的O型環具有多項優點。首先，所有規格品的模具齊全，可以提供客製化包裝，並隨時備有庫存以滿足大量快速出貨的需求。此外，紹琪擁有30年的製造經驗，能精準控制生產條件並使用低溫氮氣去除毛邊以提高產品品質。而內部採用全檢機和人工雙重品檢，確保每個產品都符合品質標準。</p>
-                                        <img src="./img/pd_p01.jpg" class="company__item-img" />
+                                        <div class="company__item-name">CIPP區段翻修材料</div>
+                                        <p>採用複合材料所編織之內襯軟管，通過拉鋪內襯工法使其貼附於既有管壁並經過加熱固化，形成堅固光滑的內襯管，以滿足管線所需功能。此種內襯管具有無縫接管內壁、杜絕油污垢及礦物質附著、樹根侵入等優點，而且與既有管材管壁完全密合，不會坍塌剝落及滲水，可以與人孔導槽一體成形。</p>
+                                        <p>此外，採用紫外線固化方式，管內無積水問題，經過溫度監控和TV監控固化品質，固化完成後管內不會形成水孔。</p>
+                                        <img src="./img/pd4_p01.jpg" class="company__item-img" />
                                     </li>
 
                                     <!-- item 2 -->
                                     <li class="company__item">
-                                        <div class="company__item-name">X 型環</div>
-                                        <p>紹琪所生產的X型環，又稱為星型環或Q-RING。本產品可適用於NBR和FKM材質，能提供優異的動態密封功能。特點包含備有齊全的模具，可提供客製化包裝，並隨時擁有庫存以滿足大量快速出貨的需求。
+                                        <div class="company__item-name">管內異物障礙排除切除機</div>
+                                        <p>HydroCut 150是一種高效且安全的自行式機器人，其高功率銑削性能可處理各種管道內部障礙物，包括混凝土管、PVC管、陶管和FRP管等。此機器人具備支撐單元以確保安裝於管道中的穩定性，並配備了旋轉攝像頭和高性能LED照明的固定攝像頭，可為使用者提供良好的視野。
                                         </p>
-                                        <img src="./img/pd_p02.jpg" class="company__item-img" />
+                                        <p>此外，HydroCut 150還可用於處理EPOXY脫落、油垢和腐蝕等問題，功能多元且全面。
+                                        </p>
+                                        <img src="./img/pd4_p02.jpg" class="company__item-img" />
                                     </li>
 
                                     <!-- item 3 -->
                                     <li class="company__item">
-                                        <div class="company__item-name">客製化異型件</div>
-                                        <p>紹琪在異型件開發方面有著優秀的能力，可以與客戶共同研發新產品。客戶只需提供圖面和使用條件，紹琪就能夠進行開發和生產。紹琪的客製化異型件具有以下特點：能夠開發客製化模具，生產能力強，開發週期短，並常備庫存以確保供應客戶生產線順利進行。</p>
-                                        <img src="./img/pd_p03.jpg" class="company__item-img" />
+                                        <div class="company__item-name">西德原裝-快速硬化無縮收混凝土</div>
+                                        <p>可藉由使用快速固化砂漿進行重新鑲嵌和塗層於人孔和管道區域進行噴塗施工。相較於進行昂貴的全面翻新，使用高性能砂漿塗覆受損的檢修孔成本將大幅降低。此外，在人孔或下水道壁上施加礦物塗層可快速修復或改善結構的水密性，阻力和靜態承載能力。</p>
+                                        <p>此快速固化砂漿具有許多特點，包括對水蒸氣成開放性，無滲透風險，能耐背部濕氣，可耐物理性衝擊，且能輕鬆修復局部破損，並在噴漿後三小時就能達到固化效果。</p>
+                                        <img src="./img/pd4_p03.jpg" class="company__item-img" />
                                     </li>
                                 </ul>
                             </div>
 
                             <div class="company__other">
-                                <a href="focus.html" class="company__other-link active"
+                                <a href="focus.html" class="company__other-link"
                                     title="紹琪實業股份有限公司">紹琪實業股份有限公司<!--<span>A0001</span>--></a>
                                 <a href="focus_2.html" class="company__other-link "
                                     title="斯卓明國際貿易有限公司">斯卓明國際貿易有限公司<!--<span>A0001</span>--></a>
                                 <a href="focus_3.html" class="company__other-link"
                                     title="繼茂橡膠工業股份有限公司">繼茂橡膠工業股份有限公司<!--<span>A0001</span>--></a>
-                                <a href="focus_4.html" class="company__other-link"
+                                <a href="focus_4.html" class="company__other-link active"
                                     title="全基企業有限公司">全基企業有限公司<!--<span>A0001</span>--></a>
                                 <a href="focus_5.html" class="company__other-link"
                                     title="財團法人工業技術研究院">財團法人工業技術研究院<!--<span>A0001</span>--></a>
