--- a/focus_5.html
+++ b/focus_5.html
@@ -79,22 +79,22 @@
                             </div>
 
                             <div class="company">
-                                <div class="company__name">紹琪實業股份有限公司</div>
-                                <a href="https://www.shaochi.com.tw" target="_blank" class="company__link"
-                                    title="www.shaochi.com.tw">www.shaochi.com.tw</a>
+                                <div class="company__name">財團法人工業技術研究院</div>
+                                <a href="https://www.itriwater.org.tw/" target="_blank" class="company__link"
+                                    title="www.itriwater.org.tw">www.itriwater.org.tw</a>
                                 <div class="company__area">
-                                    <img src="./img/bullet_trans.svg" class="img-fluid" />
-                                    輸送儲存與配件區
+                                    <img src="./img/bullet_construction.svg" class="img-fluid" />
+                                    水環境建設及周邊服務區
                                 </div>
                                 <div class="company__logo">
-                                    <img src="./img/focus_logo_01.jpg" title="紹琪實業股份有限公司" />
+                                    <img src="./img/focus_logo_05.jpg" title="財團法人工業技術研究院" />
                                 </div>
                             </div>
 
                             <div class="company__content">
                                 <div class="company__title-intro">公司簡介</div>
-                                <p>紹琪實業自1993年成立以來，致力於生產優質橡膠製品，應用範圍涵蓋飲用水設備、汽機車零件、航太和醫療器具等多個產業。公司不斷研發並運用CNC電腦車床技術，生產高品質模具和使用專用機器，如真空罩熱壓成型機和MICRO-VU影像量測儀，以提高產品品質和尺寸精確度。</p>
-                                <p>此外，紹琪還引進了射出機，以生產大型客製化產品。公司配合長泓膠業使用高品質原料，進行嚴格的品質檢測，以確保從原料到成品的品質，滿足客戶需求，並將其優質橡膠製品推廣至全球市場。</p>
+                                <p>工研院水科技研究組隨著臺灣產業的演變，從早期的輔導傳統產業進行工業廢水處理，逐漸擴展到協助高科技產業製程廢水處理，並致力於廢水的回收再利用。其研究領域從實驗室研究，模型廠驗證到實廠設計，持續擴大成長，建立了具有競爭力的水處理核心技術與專利布局，同時也擁有水處理模組與系統的設計能力。</p>
+                                <p>透過與國內外廠商的合作，已累積了超過25年的水處理經驗，並且有超過100個以上的成功實廠案例。服務對象包括廣泛，包含電子業、面板業、石化業和化工業等。此外，工研院已成功地將多項水處理與回收技術移轉至水處理產業，藉由提供最佳的技術與服務，以協助客戶減少對環境的衝擊，同時提高生產效率及產品品質。</p>
                             </div>
 
                             <div class="company__content">
@@ -103,38 +103,74 @@
                                 <ul>
                                     <!-- item 1 -->
                                     <li class="company__item">
-                                        <div class="company__item-name">O 型環</div>
-                                        <p>紹琪生產的O型環具有多項優點。首先，所有規格品的模具齊全，可以提供客製化包裝，並隨時備有庫存以滿足大量快速出貨的需求。此外，紹琪擁有30年的製造經驗，能精準控制生產條件並使用低溫氮氣去除毛邊以提高產品品質。而內部採用全檢機和人工雙重品檢，確保每個產品都符合品質標準。</p>
-                                        <img src="./img/pd_p01.jpg" class="company__item-img" />
-                                    </li>
+                                        <div class="company__item-name">厭(無)氧氨氧化技術</div>
+                                        <p>厭氧氨氧化是一種有效的廢水除氮技術，能夠在硝化程序將約一半的氨氮轉化成亞硝酸氮後，進一步利用厭氧氨氧化程序將剩下的氨氮和亞硝酸氮同時轉換成氮氣。</p>
+                                        <p>相較於傳統硝化/脫硝技術，此技術可節省近一半的曝氣動力，同時不需要添加額外有機碳源，對於處理碳源不足或是低COD/N比值的廢水更具經濟效益。</p>
+                                        <div class="company__item-box">
+                                            <img src="./img/pd5_p01.jpg" class="company__item-img" />
+                                            <div class="company__item-info">
+                                            <div class="company__item-title">特點：</div>
+                                            <ol>
+                                                <li>減少60%傳統硝化反應所需之曝氣動力</li>
+                                                <li>無需添加傳統脫硝反應所需之甲醇</li>
+                                                <li>減少50%傳統硝化脫硝產生之廢棄污泥</li>
+                                            </ol>
+                                        </div>
+                                    </div>
+                                </li>
 
                                     <!-- item 2 -->
                                     <li class="company__item">
-                                        <div class="company__item-name">X 型環</div>
-                                        <p>紹琪所生產的X型環，又稱為星型環或Q-RING。本產品可適用於NBR和FKM材質，能提供優異的動態密封功能。特點包含備有齊全的模具，可提供客製化包裝，並隨時擁有庫存以滿足大量快速出貨的需求。
+                                        <div class="company__item-name">上流式厭氧污泥床(UASB)</div>
+                                        <p>工研院開發之上流式厭氧污泥床技術已廣泛應用於國內外石化、化工、塑膠、光電等產業的廢水處理技術，且已經有50多個成功案例。該技術包括四個主要部分：進流水分配裝置、污泥床、污泥毯和氣固液分離裝置。
                                         </p>
-                                        <img src="./img/pd_p02.jpg" class="company__item-img" />
-                                    </li>
+                                        <p>在厭氧條件下，有機廢水被厭氧微生物降解代謝成甲烷氣體和二氧化碳。廢水、微生物和生物產生的氣體分別被導引到三相分離器中，氣體被收集並排出槽外，可用於發電或產熱。
+                                        </p>
+                                        <div class="company__item-box">
+                                            <img src="./img/pd5_p02.jpg" class="company__item-img" />
+                                            <div class="company__item-info">
+                                            <div class="company__item-title">特點：</div>
+                                            <ol>
+                                                <li>低初設成本</li>
+                                                <li>低操作成本</li>
+                                                <li>具有新興能源（如：甲烷）回收潛力</li>
+                                            </ol>
+                                        </div>
+                                    </div>
+                                </li>
 
                                     <!-- item 3 -->
                                     <li class="company__item">
-                                        <div class="company__item-name">客製化異型件</div>
-                                        <p>紹琪在異型件開發方面有著優秀的能力，可以與客戶共同研發新產品。客戶只需提供圖面和使用條件，紹琪就能夠進行開發和生產。紹琪的客製化異型件具有以下特點：能夠開發客製化模具，生產能力強，開發週期短，並常備庫存以確保供應客戶生產線順利進行。</p>
-                                        <img src="./img/pd_p03.jpg" class="company__item-img" />
-                                    </li>
+                                        <div class="company__item-name">智能化水處理技術</div>
+                                        <p>智能化技術是在自動化的基礎上加入了智慧程序，使得系統能夠根據不同的情況做出適當的反應，就像人類一樣具有智能。本技術整合了AIoT智能化、自動化和水處理相關技術，能夠提供成套的智能化解決方案，適用於多種不同的水處理流程，包括進流抽水、曝氣調節、生物處理、混凝沉澱和薄膜過濾等。此外，整套系統還包含可視化的遠端控制平台，能夠提供即時的水處理資訊並實現遠端控制。</p>
+                                        <div class="company__item-box">
+                                            <img src="./img/pd5_p03.jpg" class="company__item-img" />
+                                            <div class="company__item-info">
+                                            <div class="company__item-title">特點：</div>
+                                            <ol>
+                                                <li>降低能源、藥品和材料的使用，操作費用可節省20%以上。</li>
+                                                <li>提高系統的穩定性，能夠預警，減少人為疏失的發生。</li>
+                                                <li>可視化平台提供完整的水處理設備整合資訊，方便決策與管理。</li>
+                                            </ol>
+                                        </div>
+                                    </div>
+                                </li>
+
+
+
                                 </ul>
                             </div>
 
                             <div class="company__other">
-                                <a href="focus.html" class="company__other-link active"
+                                <a href="focus.html" class="company__other-link"
                                     title="紹琪實業股份有限公司">紹琪實業股份有限公司<!--<span>A0001</span>--></a>
-                                <a href="focus_2.html" class="company__other-link "
+                                <a href="focus_2.html" class="company__other-link"
                                     title="斯卓明國際貿易有限公司">斯卓明國際貿易有限公司<!--<span>A0001</span>--></a>
                                 <a href="focus_3.html" class="company__other-link"
                                     title="繼茂橡膠工業股份有限公司">繼茂橡膠工業股份有限公司<!--<span>A0001</span>--></a>
                                 <a href="focus_4.html" class="company__other-link"
                                     title="全基企業有限公司">全基企業有限公司<!--<span>A0001</span>--></a>
-                                <a href="focus_5.html" class="company__other-link"
+                                <a href="focus_5.html" class="company__other-link active"
                                     title="財團法人工業技術研究院">財團法人工業技術研究院<!--<span>A0001</span>--></a>
                             </div>
                         </div>
