--- a/info.html
+++ b/info.html
@@ -6,7 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=992px, initial-scale=1">
 
-    <title>台灣國際水週 | 運輸/淨水/水資源永續</title>
+    <title>台灣國際水週 | 電子報</title>
+
     <link rel="icon" type="image/png"
         href="https://storage.googleapis.com/www.taiwantradeshow.com.tw/ttsShow/202006/T-43764669.png" />
     <!-- css -->
@@ -23,22 +24,23 @@
                 <dvi class="row">
                     <div class="col-4 header__left">
                         <h1 class="header__logo">
-                            <a href="index.html">
+                            <a href="https://www.taiwanintlwaterweek.com/zh-tw/index.html">
                                 <img src="./img/tiww_logo.png" class="img-fluid" alt="台灣國際水週" />
                             </a>
                         </h1>
 
                         <div class="nav__tools">
-                            <a href="//www.facebook.com/taiwanwatershow/" title="Facebook"><img
-                                    src="./img/icon_facebook.svg" /></a>
-                            <a href="//www.linkedin.com/company/31086045/admin/" title="Linkedin"><img
-                                    src="./img/icon_linkedin.svg" /></a>
-                            <a href="//twitter.com/TaiwanWeek" title="Twitter"><img src="./img/icon_twitter.svg" /></a>
+                            <a href="//www.facebook.com/taiwanwatershow/" title="Facebook" target="_blank"><img
+                                src="./img/icon_facebook.png" /></a>
+                            <a href="//www.linkedin.com/company/31086045/admin/" title="Linkedin" target="_blank"><img
+                                src="./img/icon_linkedin.png" /></a>
+                            <a href="//twitter.com/TaiwanWeek" title="Twitter" target="_blank"><img src="./img/icon_twitter.png" /></a>
                         </div>
                     </div>
+
                     <div class="col-8 header__right">
                         <div class="header__no">電子報 VOL.01</div>
-                        <div class="header__en"><a  href="index-en.html" title="English">English</a>
+                        <div class="header__en"><a  href="index_en.html" title="English">English</a>
                         </div>
 
                         <!-- nav -->
@@ -71,81 +73,68 @@
                             <span>展覽訊息</span>
                         </div>
                         <div class="content__title">
-                            TIWW 2022聚焦水再生循環及永續利用<br>
-                            黑水變藍金 開拓新商機
+                            「百年大旱」再現！南臺灣降雨量再創新低<br>
+                            參加2023台灣國際水週(TIWW) 瞄準抗旱新商機
                         </div>
 
                         <div class="content__text">
-                            <p>您知道如何把「黑水」變「藍金」嗎？水資源的再生與利用一直是國家發展的重要議題，近年政府部門廣邀民間企業提供污水處理方案，使民生廢水經適當處理後得以循環再利用，每產生1萬噸再生水或回收水，約可滿足4萬人用水量。因此，經濟部、內政部及地方政府於2013年起，斥資170億元推動全臺11座再生水廠示範計畫，並透過產官學界交流合作，預計至2026年完工，並達到每日供應33.4萬噸再生水的目標。
+                            <p>2021年臺灣經歷了一場「百年大旱」，人們對於生活、工業限水以及農業休耕等措施仍記憶猶新。然而，隨著氣候變遷的加劇，臺灣的缺水問題可能會變得更加嚴重。根據統計，今年春季臺灣的降雨量是20年來的最低點，且已連續3年8個月沒有颱風登陸。其中，南部地區的降雨量更是不到過往平均的40%，且已超過600天未下過大雨。經濟部水利署指出，南部今年的旱情可能比過去的「百年大旱」時更加嚴重。氣象專家也警告，未來臺灣可能會從「十年一大旱」變成每隔2至3年就發生乾旱。
                             </p>
 
                             <div class="photo float-right">
                                 <img src="./img/info_img_01.jpg" class="img-fluid">
-                            </div>
+                            </div> 
 
 
-                            <p>除開闢更多供水途徑，減少水資源在運輸過程中的流失同樣重要。臺北自來水事業處提出中長期漏水改善計畫，投入230億元整頓供水管網系統，進行管線汰換與更新，預計漏水率可從2015年的17%，降至2025年的10%以下，提升水資源的有效利用。
+                            <p>每年臺灣的降雨量高達900億噸，但實際利用的水資源卻不到180億噸，顯示水資源管理仍存在不足之處。其中包括雨水貯存系統未能普及以及自來水管線的漏損率高(目前的漏損率約為13.1%，相當於每年浪費2.8座石門水庫之水量)。為穩定供水並節約水資源，政府和企業積極投入雨水貯留系統，特別是在工業區和綠色建築方面。例如，雲林六輕園區每日可回收2萬噸雨水，相當於全縣42天的用水量。此外，政府推動漏水改善計畫，每年撥款新臺幣80億元整頓供水管網系統，以降低漏水率，提高水資源的有效利用。
                             </p>
 
-                            <p>各項政策及水利基礎設施的開發，再再顯示再生水處理、民生及工業用水的輸送及儲存等工程、設備及解決方案需求與日俱增，臺灣業者運用產業優勢和創新技術，讓汙水重生，再創價值，未來藍金商機可期。
+                            <p>面對缺水危機，除政府推動之各種水利政策和基礎建設外，企業和民眾也應努力開源及節流。隨著水資源市場蓬勃發展，水資源的運輸、儲存、回收和循環利用等相關的產品、技術和解決方案具龐大商機。
                             </p>
                         </div>
 
                         <div class="content__text">
                             <div class="content__subtitle-info">
-                                參加「臺灣國際水週(TIWW)」，挖掘新時代水商機
+                                參加TIWW 2023立足臺灣 進軍世界
                             </div>
 
-                            <p>TIWW
-                                2022是全臺唯一B2B國際專業水展，展出全臺最尖端、最完整的水資源產品、科技和解決方案，協助參展商深耕國內、進軍國際，接觸目標買主，爭取商機。順應產業發展趨勢，本期電子報將聚焦水資源處理、再生及輸送，如何將水資源運輸過程中的浪費最小化，及有效率地將污水處理，再利用，都是本次探討主軸。
+                            <p>2023年台灣國際水週將於9月20-22日台北世貿一館辦理，邀請到經濟部水利署、臺北市工務局和桃園市水務局等中央及地方水利主管機關，還有主要產業公會如台灣機能水協會、臺灣環保暨資源再生設備工業同業公會組團參與，更有工研院、商發院、李長榮化工、揚程管機、宮黛科技、三錦機器、美商富朗世、法商威立雅等國內外指標廠商共襄盛舉，展出水資源循環利用、運輸儲存及智慧管理的解決方案。
                             </p>
 
-                            <p>本期電子報將介紹TIWW「水循環與再生水處理區」和「輸送儲存與配件區」5家參展商，展現臺灣水資源處理及運輸優勢和特色：
+                            <p>本期電子報將以水資源儲存運輸及水環境建設為主軸，專訪提供來自歐美及日本等國之水資源收集及處理設備、材料與工程技術的揚程管機股份有限公司，並介紹TIWW 2023「輸送儲存與配件區」及「水環境建設及周邊服務區」的五家參展商：
 
                             <div class="content__subtitle-area">
                                 <img src="./img/bullet_trans.svg" />
-                                水循環與再生水處理區
-                            </div>
-                            <ul>
-                                <li>「工業技術研究院」：積極發展數位水科技、減碳技術及循環經濟，協助臺灣抗旱並追求「全球永續發展目標(SDGs)」</li>
-                                <li>「環盟國際」：提供專業淨水廠和海水淡化廠代操作及維護、廢水回收再利用解決方案及大型移動式淨水處理設備統包工程</li>
-                                <li>「富爾特公司」：提供工業用水、工業廢水、市政廢水、海水淡化、RO前過濾、雨水回收、地表水過濾等淨水技術及設備</li>
-                            </ul>
-
-                            <div class="content__subtitle-area">
-                                <img src="./img/bullet_clean.svg" />
                                 輸送儲存與配件區
                             </div>
                             <ul>
-                                <li>「博洋工業」：專業研發無塞回頭式止回閥及球閥，其特殊工業用閥被廣泛使用在水道、半導體、石化、及造船產業</li>
-                                <li>「漢升密封科技」：生產應用於各式流體靜態間隙密封圈和檢測設備，產品外銷全球市場</li>
+                                <li>紹琪實業股份有限公司：致力於生產優質橡膠製品，應用範圍涵蓋飲用水設備、汽機車零件、航太和醫療器具等產業</li>
+                                <li>斯卓明國際貿易有限公司：藉由持續研發及創新，提供高效能之各式閥類產品，如蝶閥及球塞閥</li>
+                                <li>繼茂橡膠工業股份有限公司：臺灣領先的橡膠密封零配件品牌，產品種類多元，已廣泛應用於飲用水、食品、半導體及一般工業等行業</li>
                             </ul>
 
 
                             <div class="content__subtitle-area">
                                 <img src="./img/bullet_construction.svg" />
-                                輸送儲存與配件區
+                                水環境建設及周邊服務區
                             </div>
                             <ul>
-                                <li>「博洋工業」：專業研發無塞回頭式止回閥及球閥，其特殊工業用閥被廣泛使用在水道、半導體、石化、及造船產業</li>
-                                <li>「漢升密封科技」：生產應用於各式流體靜態間隙密封圈和檢測設備，產品外銷全球市場</li>
+                                <li>全基企業有限公司：藉由多年維修經驗及國際技術合作，為客戶提供從單一系統檢測到各種複雜管道的維護和更新等客製化解決方案</li>
+                                <li>工業技術研究院：協助高科技產業製程廢水處理，並致力於廢水的回收再利用。透過與國內外廠商的合作，已累積逾百件成功實廠案例</li>
                             </ul>
-
-
-                            </p>
+</p>
 
 
 
                         </div>
 
 
-                        <div class="content__subtitle-info">
+                        <div class="content__subtitle-cta">
                             <div>
-                                TIWW
-                                2022將於10月13-15日世貿一館登場，同時邀請水利主管機關-經濟部水利署協辦，籌組水利主題館參展，同期亦將於台北國際會議中心辦理TIWW國際論壇。想與政府、產業代表及學者專家同場交流，尋找策略夥伴或爭取我國水利建設商機，或是向全球買主展示您的智慧解決方案，拓展海外市場，即刻點擊下方連結報名！
+                                TIWW 2023現正熱烈徵展中！想將您的智慧解決方案行銷海內外，千萬別錯過全臺唯一專業水資源專業展，攤位有限，即刻把握機會並點擊以下連結報名參展！
                             </div>
 
-                            <a href="https://events.taiwantrade.com/tiww2022ch/?_ga=2.132833358.1505457723.1651198829-1032239943.1644760556"
+                            <a href="https://events.taiwantrade.com/tiww2023ch?_ga=2.117353094.1620945459.1684714666-1290874424.1683075663"
                                 target="_blank" class="content__btn-register" title="點擊報名">
                                 點擊報名
                             </a>
@@ -154,12 +143,12 @@
                         <div class="row mt-5">
                             <div class="col-6">
                                 <div class="photo">
-                                    <img src="./img/info_img_03.jpg" class="img-fluid">
+                                    <img src="./img/info_img_02.jpg" class="img-fluid">
                                 </div>
                             </div>
                             <div class="col-6">
                                 <div class="photo">
-                                    <img src="./img/info_img_04.jpg" class="img-fluid">
+                                    <img src="./img/info_img_03.jpg" class="img-fluid">
                                 </div>
                             </div>
                         </div>
@@ -177,7 +166,7 @@
                 <div class="row">
                     <div class="col-6">
                         <div class="footer__title">主辦單位：
-                            <a href="//www.taitra.org.tw/" class="footer__item" title="中華民國對外貿易發展協會"><img
+                            <a href="https://www.taitra.org.tw/" class="footer__item" title="中華民國對外貿易發展協會"><img
                                     src="./img/logo_tetdc.svg" /></a>
                         </div>
                     </div>
