--- a/news_2.html
+++ b/news_2.html
@@ -72,55 +72,51 @@
                             <span>產業新聞</span>
                         </div>
                         <div class="content__title">
-                            水價也跟著漲？電價頻漲「台水虧損加劇」<br>
-                            擬擴大水費級距：用多繳多
+                            抗缺水！南水局推動多元水資源建設應對氣候變遷挑戰
                         </div>
-                        <a href="https://n.yam.com/Article/20230518513873" class="content__source" target="_blank">
-                            資料來源：eNews新聞網/記者 曾亭皓
+                        <a href="https://ubrand.udn.com/ubrand/story/12117/7149695" class="content__source" target="_blank">
+                            資料來源：udn/倡議家
                         </a>
 
                         <div class="content__text">
 
                             <div class="photo photo__caption float-right">
-                                <img src="./img/news_01_img_01.jpg" class="img-fluid" />
-                                <span>台電漲、缺水狀況未得緩解，台水擬漲價。(示意圖／shutterstock)</span>
+                                <img src="./img/news_02_img_01.jpg" class="img-fluid" />
+                                <span>南部地區水情不佳，南水局指出，近年前瞻基礎建設加強水資源建設，已大幅增加南部地區區域供水韌性，降低去年及今年旱象衝擊。<br>(圖／freepik)</span>
                             </div>
 
-                            <p>台灣自來水公司（台水）面臨的營運成本增加，部分原因源於電價調漲，使得公司營運難度增加，並加劇了早已存在的缺水問題。水處理和供應過程需要大量電力，電價調整的壓力不可避免地反映在水價上。
+                            <p>南部地區水情不佳，南水局指出，近年前瞻基礎建設加強執行伏流水、再生水等多元水資源建設，已大幅增加南部地區區域供水韌性，降低去年及今年旱象衝擊。
                             </p>
-                            <p>不僅受到台電兩次調漲電價，導致台水虧損加劇，台灣近年的氣候變遷影響、降雨量不足也是造成缺水主因，尤其在地勢陡峭、難以儲水的南部地區，更是導致頻繁的缺水問題。根據交通部中央氣象局統計，2022年南部地區的年降雨量為近30年以來的最低點。
-                            </p>
-
-                            <p>即便日前經濟部長王美花才表示，雖然今年台灣的水資源供應情況不佳，但她確保，目前並無調漲水費的規劃。她進一步指出，新的耗水費政策才剛開始實施，經濟部將依據全面的用水情況來進行審查和調整。
+                            <p>經濟部水利署南區水資源局今天發布新聞稿指出，高屏溪是高雄地區主要取水來源，流域地下含水層蘊藏量豐厚且透水性良好，為充分運用豐沛水資源，除沿岸已設置8處伏流水取水設施外，將再開發荖濃溪（里嶺）伏流水，預計115年可產水每日10萬立方公尺，並持續評估上游增設伏流水設施可行性。
                             </p>
 
-                            <div class="content__subtitle">
+                            <p>南水局指出，曾文與南化水庫聯通管預定於明年完工，屆時可強化區域調度能力，充分發揮台南與高雄區域供水特性，提高南部地區供水韌性。
+                            </p>
+
+                            <!--<div class="content__subtitle">
                                 水費調漲？立委建議擴大水價級距
                             </div>
 
                             <div class="photo photo__caption float-left">
                                 <img src="./img/news_01_img_02.jpg" class="img-fluid" />
                                 <span>立委建議可以將水價擬增至7級。（示意圖／shutterstock）<br>&nbsp;</span>
-                            </div>
+                            </div>-->
 
-                            <p>對於台水的營運困難，立法委員陳明文提出建議，考慮將水價的累進費率擴大至7級，以處理不斷增長的營運成本問題，希望透過此舉鼓勵節約用水。這樣的調整意味著，用水量越大的用戶，所需支付的水費將會越高。這項方案旨在更有效地管理水資源，並鼓勵節約用水。
+                            <p>南水局指出，除傳統水資源，目前積極推動科技造水，其中台南海水淡化廠興建計畫正著手進行補充調查及先期作業，預計明年完成工程招標、第1期工程將於117年完成，屆時將可供應每日10萬立方公尺海淡水。
                             </p>
 
-                            <p>另一方面，台水也正努力降低漏水率，減少水資源的浪費。對於高雄每天漏水量高達11萬噸的情況，立法委員張其祿表示了深深的擔憂，並呼籲政府要嚴格要求降低漏水率，以保護珍貴的水資源。
-                            </p>
-
-                            <p>面對用水問題，政府已經採取了多項措施，包括增加抗旱水井的數量，建立移動式淨水設施，並推動再生水的使用。這些措施的目的都是為了確保台灣的用水需求能得到滿足，並在可能的情況下，降低對自來水的依賴。
+                            <p>南水局指出，另外為善用曾文溪感潮河段水資源，已辦理「曾文溪感潮河段水資源利用模廠建置計畫」，透過模廠試驗操作及成果進行彙整分析，以作為後續半鹹水實廠計畫推動參考，面對未來極端氣候的挑戰，南水局將持續推動各項多元水資源建設。
                             </p>
 
                         </div>
 
                         <div class="content__other">
 
-                            <a href="#" class="content__link-news active" title="水價也跟著漲？電價頻漲「台水虧損加劇」　擬擴大水費級距：用多繳多">
+                            <a href="news.html" class="content__link-news" title="水價也跟著漲？電價頻漲「台水虧損加劇」　擬擴大水費級距：用多繳多">
                                 水價也跟著漲？電價頻漲「台水虧損加劇」　擬擴大水費級距：用多繳多
                             </a>
 
-                            <a href="news_2.html" class="content__link-news" title="視察永康再生水廠  蘇揆：持續推動全國再生水工程 讓水資源循環再利用">
+                            <a href="#" class="content__link-news active" title="視察永康再生水廠  蘇揆：持續推動全國再生水工程 讓水資源循環再利用">
                                 抗缺水！南水局推動多元水資源建設應對氣候變遷挑戰
                             </a>
 
