--- a/topic.html
+++ b/topic.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=992px, initial-scale=1">
 
-    <title>台灣國際水週 | 運輸/淨水/水資源永續</title>
+    <title>台灣國際水週 | 電子報</title>
 
     <link rel="icon" type="image/png"
         href="https://storage.googleapis.com/www.taiwantradeshow.com.tw/ttsShow/202006/T-43764669.png" />
@@ -25,22 +25,23 @@
                 <dvi class="row">
                     <div class="col-4 header__left">
                         <h1 class="header__logo">
-                            <a href="index.html">
+                            <a href="https://www.taiwanintlwaterweek.com/zh-tw/index.html">
                                 <img src="./img/tiww_logo.png" class="img-fluid" alt="台灣國際水週" />
                             </a>
                         </h1>
 
                         <div class="nav__tools">
-                            <a href="//www.facebook.com/taiwanwatershow/" title="Facebook"><img
-                                    src="./img/icon_facebook.svg" /></a>
-                            <a href="//www.linkedin.com/company/31086045/admin/" title="Linkedin"><img
-                                    src="./img/icon_linkedin.svg" /></a>
-                            <a href="//twitter.com/TaiwanWeek" title="Twitter"><img src="./img/icon_twitter.svg" /></a>
+                            <a href="//www.facebook.com/taiwanwatershow/" title="Facebook" target="_blank"><img
+                                src="./img/icon_facebook.png" /></a>
+                            <a href="//www.linkedin.com/company/31086045/admin/" title="Linkedin" target="_blank"><img
+                                src="./img/icon_linkedin.png" /></a>
+                            <a href="//twitter.com/TaiwanWeek" title="Twitter" target="_blank"><img src="./img/icon_twitter.png" /></a>
                         </div>
                     </div>
+
                     <div class="col-8 header__right">
                         <div class="header__no">電子報 VOL.01</div>
-                        <div class="header__en"><a href="index-en.html" title="English">English</a>
+                        <div class="header__en"><a href="index_en.html" title="English">English</a>
                         </div>
 
                         <!-- nav -->
@@ -72,7 +73,7 @@
                             <span>專題報導</span>
                         </div>
                         <div class="content__title">
-                            再生水資源發展條例修正三讀
+                            高效率、低成本&nbsp;&nbsp;&nbsp;真空污水系統「沖」破重力瓶頸
                         </div>
 
 
@@ -80,48 +81,37 @@
 
                             <div class="photo photo__caption float-left">
                                 <img src="./img/topic_img_01.jpg" class="img-fluid" />
-                                <span>每日可供應8000噸再生水給南部科學園區使用。</span>
+                                <span>(圖片來源：Pixabay)</span>
                             </div>
 
-                            <p>立法院今（29）日三讀通過「再生水資源發展條例部分條文修正案」，擴大再生水使用範圍，未來一定規模以上的開發行為，都要使用一定比率的再生水。經濟部水利署表示，再生水可降低水源供應風險及強化枯水期供水韌性，預期本次修法後，更能穩定產業及民生用水。
+                            <p>污水處理系統是城市文明發展向前躍進的重要里程碑，但傳統重力式污水收集技術發展至今，仍存在不少難以克服的瓶頸。由本次台灣國際水週(TIWW)參展商—揚程管機股份有限公司引進的「真空污水收集技術」，能針對傳統技術痛點提供更省時、低成本且易於維護的解決方案。該方案可同時適用於下水道與建築污水系統，且在全球市場的應用已超過50年，發展相當成熟。
                             </p>
-                            <p>新設開發案應使用一定比率再生水
-                                每三年檢討經歷百年大旱衝擊，政府加強推動再生水等多元水源，經濟部水利署今年初預告修正「再生水資源發展條例」部分條文，刪除「位在水源供應短缺之虞地區」才要使用再生水的條件，意即不論位在任何地區，一定規模以上的開發行為，都要使用一定比率的再生水，大幅擴大再生水使用範圍。
+                            <p>揚程管機業務經理李澤坤表示：「簡單來說，用戶污水會先被收集在真空井的污水槽中，到一定量後再藉由負壓及氣液混合方式，經真空管線快速輸送至真空站的儲槽內，待最後加壓輸送至污水處理廠或公共下水道系統。」
                             </p>
 
                             <div class="photo photo__caption float-right">
                                 <img src="./img/topic_img_02.jpg" class="img-fluid" />
-                                <span>台南市永康再生水廠第一期去年完工，每日可供應8000噸再生水給南部科學園區使用。(圖片來源：行政院提供)</span>
+                                <span>真空污水下水道系統<br>&nbsp;</span>
                             </div>
 
-                            <p>該草案經行政院3月通過後，立院經濟委員會於本月20日審查，委員會決議新增檢討機制，針對開發單位使用再生水之適用範圍、使用比率，或是對於「一定規模」定義等規範，由中央主管機關會商相關目的事業主管機關訂定，並且每三年檢討一次。
+                            <p>從真空井到真空站間，採用的是鋸齒狀配置的真空管線，與重力式管線相比口徑較小，節省用料且需要的開挖寬度小，埋設層也較淺。這使得施工過程中對現場破壞度較低，復原也更容易，從而節省施工時間和成本。此外，該技術還具有可水平或垂直向上流動的特點，能根據特殊需求調整管線高度或避開障礙物，提供比傳統方法更靈活的管線配置。
                             </p>
 
-                            <p>立法院院會今日針對草案進行二讀逐條討論，但沒有立法委員提出異議，三讀程序也沒有任何文字修正，最終由立法院長游錫堃敲槌宣告三讀通過。</p>
+                            <p>因此，真空污水收集技術對地理環境嚴峻、舊建物翻新整頓、施工條件受限等案場來說特別有優勢。李澤坤提到：「例如大鵬灣風景區因為近海區地下水位高，傳統工法施作不易，成本高昂；還有學校、軍營、監獄等特殊場域，須在短時間內完成施工，以免影響既定活動；或是舊大樓翻新時，常遇到因應營業需求大幅更改配管、原管線固定不易調整、建築動線複雜等問題，這些現在都能順利解決。」</p>
 
-                            <p>水利署表示，後續將邀請相關目的事業主管機關及產業界等共同研商，依產業特性另訂子法。</p>
+                            <p>不僅有施工優勢，新技術在營運維護上也帶來不少好處。真空管線內的污水因採高速輸送，所以沒有堵塞隱憂，也無硫化氫(H₂S)等具腐蝕性的危害氣體，加上得利於密閉系統的特性，不會有臭味溢散、污水外洩，及外部地下水或雨水滲入等問題，使日常運作更加穩定。</p>
 
-                            <p>立法院院會今（29）日三讀通過「再生水資源發展條例部分條文修正案」。圖片來源：擷取自立法院議事轉播系統<br>
-                                再生水水源穩定可救旱 目標2031年11座再生水廠<br>
-                                水利署表示，再生水在去年百年大旱已成為產業的關鍵抗旱水源，可降低水源供應風險及強化枯水期供水韌性。「再生水資源發展條例部分條文修正案」三讀通過後，預期將擴大再生水使用範圍，減少對降水依賴，更穩定產業及民生用水。
+                            <p>此外，真空井本身不需要電力，系統能耗都集中在真空站內，而1座真空站即可收集大區域內多個真空井的污水，對河濱公園、風景區、遊樂園等腹地廣大使用點又分散的情況，能大幅提升施工及運作效率。
                             </p>
                             <div class="photo photo__caption float-left">
                                 <img src="./img/topic_img_03.jpg" class="img-fluid" />
-                                <span>台南市永康再生水廠第一期去年完工，每日可供應8000噸再生水給南部科學園區使用。(圖片來源：行政院提供)</span>
+                                <span>真空污水系統-建築物用<br>&nbsp;</span>
                             </div>
-                            <p>水利署說明，再生水水源多來自生活污水，而「只要有用水就會有污水」，因此再生水的水源可說是相對穩定，具有保險用水特性。去年旱情，政府就部署了27台RO淨水設備，供應產業用水每日1萬3500噸，並以全國公共污水處理廠的放流水供應民生次級用水等，可見再生水對穩定產業發展的益處。
+                            <p>李澤坤指出：「如果建物再搭配使用真空馬桶，就能把每次沖水量降到約1.2公升，大概是一般省水馬桶的1/5，對大型活動場館、購物中心、商辦大樓等，污水流量與瞬間處理量高的場所來說相當有利，也符合現今省水節能趨勢。」
                             </p>
 
-                            <p>水利署目前規劃11座再生水廠，除了已啟用的高雄鳳山、台南永康及高雄臨海再生水廠，還有桃園桃北、新竹竹北、台中豐原、台中水湳、台中福田、台南安平、台南仁德、高雄岡山等廠持續興建中，目標在2031年全數完工，預估可以增加每日28.9萬噸供水量。
+                            <p>揚程管機引進真空污水收集技術已超過10年，並在台灣完成了6個以上的實場案例，在地施工和維護經驗都相當豐富，前期主要聚焦於下水道系統工程，接下來預計將逐步拓展至建築方面的應用，精準切入利基市場，提供客戶更節水的系統設計與更高效的配管解決方案。
                             </p>
-
-                            <p>行政院長蘇貞昌昨（28）日赴台南永康再生水廠視察時表示，面對未來可能遭遇水資源缺乏，推動再生水工程是愛護水資源最實際的做法。未來將持續推動更多再生水工程，除處理污水外，提供比自來水品質更好的再生水，進而「化腐朽為神奇，變髒水為活水」。
-                            </p>
-
-                            <p>永康再生水廠目前供應給台南科技產業園區使用，蘇貞昌表示，未來科學園區在規劃時，應於周邊設置水資源循環中心，讓產業污水再循環運用。</p>
-
-                            <p>行政院長蘇貞昌昨（28）日表示，未來規劃科學園區時，周邊應設置水資源循環中心。<br>
-                                對於不斷成長的設廠需求，經濟部長王美花日前在立院表示，上述11座再生水廠只是初期的建設，未來會視需求擴充或新建，目標是在2031年公共污水處理廠每日供應77萬噸再生水。</p>
 
                         </div>
 
@@ -149,7 +139,7 @@
                 <div class="row">
                     <div class="col-6">
                         <div class="footer__title">主辦單位：
-                            <a href="//www.taitra.org.tw/" class="footer__item" title="中華民國對外貿易發展協會"><img
+                            <a href="https://www.taitra.org.tw/" class="footer__item" title="中華民國對外貿易發展協會"><img
                                     src="./img/logo_tetdc.svg" /></a>
                         </div>
                     </div>
