--- a/index_en.html
+++ b/index_en.html
@@ -6,7 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=992px, initial-scale=1">
 
-    <title>台灣國際水週 | 電子報</title>
+    <title>TIWW E-Newsletter</title>
+
     <link rel="icon" type="image/png"
         href="https://storage.googleapis.com/www.taiwantradeshow.com.tw/ttsShow/202006/T-43764669.png" />
     <!-- css -->
@@ -23,8 +24,8 @@
                 <dvi class="row">
                     <div class="col-4 header__left">
                         <h1 class="header__logo">
-                            <a href="https://www.taiwanintlwaterweek.com/zh-tw/index.html">
-                                <img src="./img/tiww_logo.png" class="img-fluid" alt="台灣國際水週" />
+                            <a href="https://www.taiwanintlwaterweek.com/en/index.html">
+                                <img src="./img/tiww_logo_en.png" class="img-fluid" alt="TIWW" />
                             </a>
                         </h1>
 
@@ -38,25 +39,25 @@
                     </div>
 
                     <div class="col-8 header__right">
-                        <div class="header__no">電子報 VOL.01</div>
-                        <div class="header__en"><a href="index_en.html" title="English">English</a>
+                        <div class="header__no">E-Newsletter VOL.01</div>
+                        <div class="header__en"><a href="index.html" title="English">中文</a>
                         </div>
 
                         <!-- nav -->
                         <ul class="header__nav nav">
                             <li class="nav-item"><a class="nav-link"
-                                    href="//www.taiwanintlwaterweek.com/zh-tw/menu/1374A7912D94FD49D0636733C6861689/info.html"
-                                    title="各期電子報">各期電子報</a></li>
-                            <li class="nav-item"><a class="nav-link" href="index.html" title="電子報首頁">電子報首頁</a></li>
-                            <li class="nav-item"><a class="nav-link" href="info.html" title="展覽訊息">展覽訊息</a></li>
-                            <li class="nav-item"><a class="nav-link" href="topic.html" title="專題報導">專題報導</a></li>
-                            <li class="nav-item"><a class="nav-link" href="news.html" title="產業新聞">產業新聞</a></li>
-                            <li class="nav-item"><a class="nav-link" href="focus.html" title="參展廠商搶先報">參展廠商搶先報</a></li>
+                                    href="//www.taiwanintlwaterweek.com/en/menu/0310452A3038CE62D0636733C6861689/info.html"
+                                    title="E-Newsletter">E-Newsletter</a></li>
+                            <li class="nav-item"><a class="nav-link" href="index_en.html" title="Home">Home</a></li>
+                            <li class="nav-item"><a class="nav-link" href="info_en.html" title="Show News">Show News</a></li>
+                            <li class="nav-item"><a class="nav-link" href="topic_en.html" title="Show Topic">Show Topic</a></li>
+                            <li class="nav-item"><a class="nav-link" href="news_en.html" title="Industry News">Industry News</a></li>
+                            <li class="nav-item"><a class="nav-link" href="focus_en.html" title="Exhibitor Info">Exhibitor Info</a></li>
                         </ul>
 
-                        <div class="header__slogan">運輸<span style="font-weight: 300">/</span>淨水<span style="font-weight: 300">/</span>水資源永續</div>
+                        <div class="header__slogan_en">Water Transport<span style="font-weight: 300">/</span>Purification<span style="font-weight: 300">/</span><br>Sustainable Water Development</div>
                         <div class="header__date">2023.09.20-22</div>
-                        <div class="header__location">台北世貿一館</div>
+                        <div class="header__location">TWTC HALL 1</div>
                         <div class="header__slogan-en">Every Drop Matters!</div>
                     </div>
                 </dvi>
@@ -72,21 +73,20 @@
                 <div class="container">
                     <div class="info__title">
                         <img src="./img/bullet_main.svg" class="info__title-img" />
-                        <span>展覽訊息</span>
+                        <span>Show News</span>
                     </div>
 
                     <div class="row justify-content-end">
                         <div class="col-9">
                             <div class="info__subtitle">
-                                「百年大旱」再現！南臺灣降雨量再創新低<br>
-                                參加2023台灣國際水週(TIWW) 瞄準抗旱新商機
+                                Overcoming drought stress:<br>Participate in TIWW 2023 to locate new Business opportunities for drought relief
                             </div>
                             <div class="info__box">
                                 <div class="info__data">
                                     <div class="info__text">
-                                        2021年臺灣經歷了一場「百年大旱」，人們對於生活、工業限水以及農業休耕等措施仍記憶猶新。然而，隨著氣候變遷的加劇，臺灣的缺水問題可能會變得更加嚴重。根據統計，今年春季臺灣的降雨量是20年來的最低點，且已連續3年8個月沒有颱風登陸。其中，南部地區的降雨量更是不到過往平均的40%，且已超過600天未下過大雨。經濟部水利署指出，南部今年的旱情可能比過去的「百年大旱」時更加嚴重。氣象專家也警告，未來臺灣可能會從「十年一大旱」變成每隔2至3年就發生乾旱。
+                                        In 2021, Taiwan experienced the drought of the century. To this day, people still remember how water rationing inflicted huge loss in daily life activities, industries, and farmland. However, as climate change intensifies, water shortage in Taiwan may further worsen in the foreseeable future. According to statistics, precipitation in Taiwan this spring reached the lowest point in 20 years, and no typhoon has made landfall on this island for 3 years and 8 months. Besides, the precipitation in the southern region has dropped to less than 40% of the previous average rainfall with no record of heavy rain for more than 600 days. The Water Resources Agency (WRA) of the Ministry of Economic Affairs pointed out that this year's drought in southern Taiwan may be worse than the drought of the century in 2021. Meteorologists have also warned that, drought may hit Taiwan every two to three years in the future.
                                     </div>
-                                    <a href="info.html" class="btn btn__more-b">READ MORE</a>
+                                    <a href="info_en.html" class="btn btn__more-b">READ MORE</a>
                                 </div>
                                 <div class="info__img">
                                     <img src="./img/main_img_info.jpg" class="img-fluid" />
@@ -103,7 +103,7 @@
                 <div class="container">
                     <div class="topic__title">
                         <img src="./img/bullet_main.svg" class="topic__title-img" />
-                        <span>專題報導</span>
+                        <span>Show Topic</span>
                     </div>
                     <div class="row justify-content-end">
                         <div class="col-9">
@@ -119,7 +119,7 @@
                                     <div class="topic__text">
                                         污水處理系統是城市文明發展向前躍進的重要里程碑，但傳統重力式污水收集技術發展至今，仍存在不少難以克服的瓶頸。由本次台灣國水週(TIWW)參展商—揚程管機股份有限公司引進的「真空污水收集技術」，能針對傳統技術痛點提供更省時、低成本且易於維護的解決方案。該方案可同時適用於下水道與建築污水系統，且在全球市場的應用已超過50年，發展相當成熟。
                                     </div>
-                                    <a href="topic.html" class="btn btn-left btn__more-w">READ MORE</a>
+                                    <a href="topic_en.html" class="btn btn-left btn__more-w">READ MORE</a>
                                 </div>
                             </div>
                         </div>
@@ -140,7 +140,7 @@
                 <div class="container">
                     <div class="news__title">
                         <img src="./img/bullet_main.svg" class="topic__title-img" />
-                        <span>產業新聞</span>
+                        <span>Industry News</span>
                     </div>
                     <div class="row justify-content-end">
                         <div class="col-9">
@@ -148,25 +148,25 @@
                                 <div class="col-6 ">
                                     <div class="news__item">
                                         <div class="news__subtitle">
-                                            水價也跟著漲？電價頻漲「台水虧損加劇」擬擴大水費級距：用多繳多<br>
+                                            Half of world's largest lakes, reservoirs losing water: Study<br>&nbsp;
                                         </div>
                                         <div class="news__data">
-                                            <div class="news__text">
-                                                台灣自來水公司（台水）面臨的營運成本增加，部分原因源於電價調漲，使得公司營運難度增加，並加劇了早已存在的缺水問題。水處理和供應過程需要大量電力，電價調整的壓力不可避免地反映在水價上。 不僅受到台電兩次調漲電價，導致台水虧損加劇，台灣近年的氣候變遷影響、降雨量不足也是造成缺水主因，尤其在地勢陡峭、難以儲水的南部地區，更是導致頻繁的缺水問題。根據交通部中央氣象局統計，2022年南部地區的年降雨量為近30年以來的最低點。
+                                            <div class="news__text_en">
+                                                New study finds unsustainable human use has led to more than half of the largest lakes drying up around the world. More than half of the world's large lakes and reservoirs have shrunk since the early 1990s, chiefly because of climate change, intensifying concerns about water for agriculture, hydropower and human consumption, a new study has found.
                                             </div>
-                                            <a href="news.html" class="btn btn__more-w">READ MORE</a>
+                                            <a href="news_en.html" class="btn btn__more-w">READ MORE</a>
                                         </div>
                                     </div>
                                 </div>
                                 <div class="col-6">
                                     <div class="news__item">
-                                        <div class="news__subtitle">抗缺水！南水局推動多元水資源建設應對氣候變遷挑戰
+                                        <div class="news__subtitle">From the sea and from land: the new ways to avoid being left without water
                                         </div>
                                         <div class="news__data">
-                                            <div class="news__text">
-                                                南部地區水情不佳，南水局指出，近年前瞻基礎建設加強執行伏流水、再生水等多元水資源建設，已大幅增加南部地區區域供水韌性，降低去年及今年旱象衝擊。 經濟部水利署南區水資源局今天發布新聞稿指出，高屏溪是高雄地區主要取水來源，流域地下含水層蘊藏量豐厚且透水性良好，為充分運用豐沛水資源，除沿岸已設置8處伏流水取水設施外，將再開發荖濃溪（里嶺）伏流水，預計115年可產水每日10萬立方公尺，並持續評估上游增設伏流水設施可行性。
+                                            <div class="news__text_en">
+                                                Three out of four people in the world have access to safely managed drinking water. Announced by the World Bank in 2020, it's an encouraging number given that 20 years ago only 62 percent of the world's population had access to a safe water source free from contamination, improved by a pipe, a drilled well or a readily available local well. Today that number has risen to 74 percent.
                                             </div>
-                                            <a href="news_2.html" class="btn btn__more-w">READ MORE</a>
+                                            <a href="news_2_en.html" class="btn btn__more-w">READ MORE</a>
                                         </div>
                                     </div>
                                 </div>
@@ -180,7 +180,7 @@
                 <div class="container">
                     <div class="focus__title">
                         <img src="./img/bullet_main.svg" class="topic__title-img" />
-                        <span>參展廠商搶先報</span>
+                        <span>Exhibitor Info</span>
                     </div>
 
                     <div class="row justify-content-end">
@@ -217,26 +217,26 @@
                             <!-- 3 -->
                             <div class="focus__col-box">
                                 <div class=" focus__col">
-                                    <a href="focus.html" class="focus__link">
+                                    <a href="focus_en.html" class="focus__link">
                                         <img src="./img/d_v_01_img.jpg" class="img-fluid" />
                                     </a>
-                                    <div class="focus__name"> <a href="focus.html">紹琪實業股份有限公司</a><br>&nbsp;</div>
+                                    <div class="focus__name"> <a href="focus_en.html">Shao Chi Enterprise Co., Ltd</a><br>&nbsp;</div>
                                     <!--<div class="focus__no">攤位號碼：AA001</div>-->
                                 </div>
 
                                 <div class="focus__col">
-                                    <a href="focus_2.html" class="focus__link">
+                                    <a href="focus_2_en.html" class="focus__link">
                                         <img src="./img/d_v_02_img.jpg" class="img-fluid" />
                                     </a>
-                                    <div class="focus__name"><a href="focus_2.html">斯卓明國際貿易有限<br>公司</a></div>
+                                    <div class="focus__name"><a href="focus_2_en.html">StreaMing International Trading Co., Ltd</a></div>
                                     <!--<div class="focus__no">攤位號碼：AA001</div>-->
                                 </div>
 
                                 <div class="focus__col">
-                                    <a href="focus_3.html" class="focus__link">
+                                    <a href="focus_3_en.html" class="focus__link">
                                         <img src="./img/d_v_03_img.jpg" class="img-fluid" />
                                     </a>
-                                    <div class="focus__name"><a href="focus_3.html">繼茂橡膠工業股份有限公司</a></div>
+                                    <div class="focus__name"><a href="focus_3_en.html">Ge Mao Rubber Industrial Co., Ltd.</a><br>&nbsp;</div>
                                     <!--<div class="focus__no">攤位號碼：AA001</div>-->
                                 </div>
                             </div>
@@ -244,18 +244,18 @@
                            <!-- 2 -->
                             <div class="focus__col-box">
                                 <div class="focus__col">
-                                    <a href="focus_4.html" class="focus__link">
+                                    <a href="focus_4_en.html" class="focus__link">
                                         <img src="./img/d_v_04_img.jpg" class="img-fluid" />
                                     </a>
-                                    <div class="focus__name"><a href="focus_4.html">全基企業有限公司</a></div>
+                                    <div class="focus__name"><a href="focus_4_en.html">Leestone Engineering & Mercantile Co., Ltd.</a></div>
                                     <!--<div class="focus__no">攤位號碼：AA001</div>-->
                                 </div>
 
                                 <div class="focus__col">
-                                    <a href="focus_5.html" class="focus__link">
+                                    <a href="focus_5_en.html" class="focus__link">
                                         <img src="./img/d_v_05_img.jpg" class="img-fluid" />
                                     </a>
-                                    <div class="focus__name"><a href="focus_5.html">財團法人工業技術<br>研究院</a></div>
+                                    <div class="focus__name"><a href="focus_5_en.html">Industrial Technology Research Institute</a></div>
                                     <!--<div class="focus__no">攤位號碼：AA001</div>-->
                                 </div>
                             </div>
@@ -285,8 +285,8 @@
             <div class="container">
                 <div class="row">
                     <div class="col-6">
-                        <div class="footer__title">主辦單位：
-                            <a href="https://www.taitra.org.tw/" class="footer__item" title="中華民國對外貿易發展協會"><img
+                        <div class="footer__title">Organizer：
+                            <a href="https://www.taitra.org.tw/en/Default.aspx" class="footer__item" title="TAITRA" target="_blank"><img
                                     src="./img/logo_tetdc.svg" /></a>
                         </div>
                     </div>
